tests/reference/ast-esub2-248f0df.stderr
tests/errors/esub2.f90:3:5 syntax error: token '~' is not recognized
x = ~1
    ^
